# cks-mcp

./: .env_example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  diagnostics_rag.py  hf.py  pyproject.toml  test_hf.py  test_integration.py
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  index.md
examples/: validate_request.json
llm_client/: cks_llm_client.py
src/cks_mcp/: errors.py  observability.py  prompts.py  provenance.py  resources.py  server.py  tools.py
src/cks_mcp/tools/: __init__.py  branch.py  compare.py  derive.py  evolve.py  explain.py  get_metrics.py  merge.py  query.py  query_subgraph.py  revert.py  search_semantic.py  serialize.py  validate.py  verify_source.py
tests/: test_branch_merge.py  test_compare.py  test_compare_direction.py  test_derive.py  test_evolve.py  test_integration.py  test_provenance_gating.py  test_query.py  test_server.py  test_tools.py  test_transaction_cleanup.py  test_validate.py  test_validate_extensions.py  test_verify_source.py
