[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cks-mcp"
version = "1.0.6"
description = "CKS MCP Server — Canonical Knowledge Structure for LLMs"
readme = "README.md"
authors = [{name = "Vladyslav Hruznov"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "cks-runtime>=1.2.0",
    "cks-core>=1.7.0",
    "requests>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cks-mcp = "cks_mcp.server:main"